[add] estilizacao do site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
             <li><a href="#contato">Contato</a></li>
-            <li><a href="https://www.origamid.com">Dev &#10132;</a></li>
+            <li><a href="https://www.origamid.com">Dev →</a></li>
         </ul>
     </nav>
     <section class="grid-section animais" id="animais">
@@ -187,10 +187,10 @@
                 médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
             </dd>
             <dt>Eles são fantásticos?</dt>
-            </dd>
-            Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
-            felídeos.
             <dd>
+                Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                felídeos.
+            </dd>
             <dt>Qual a diferença?</dt>
             <dd>
                 As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
